# freqtweak

./: AUTHORS  INSTALL  Makefile.am  NEWS  README  README.CVS  THANKS  autogen.sh  configure.ac  freqtweak.1  ft_preset_convert.py
doc/: Makefile.am  index.html  screenshots.html  usagehelp.html
doc/.xvpics/CVS/: Entries  Repository
doc/CVS/: Entries  Repository
mac/CVS/: Repository
mac/FreqTweak/: FreqTweak-Info.plist
mac/FreqTweak/CVS/: Entries  Repository  Root
mac/FreqTweak/FreqTweak.xcode/: project.pbxproj
mac/FreqTweak/FreqTweak.xcode/CVS/: Entries  Repository
src/: FTactiveBarGraph.cpp  FTactiveBarGraph.hpp  FTapp.cpp  FTapp.hpp  FTconfigManager.cpp  FTconfigManager.hpp  FTdspManager.cpp  FTdspManager.hpp  FThelpWindow.cpp  FThelpWindow.hpp  FTioSupport.cpp  FTioSupport.hpp  FTjackSupport.cpp  FTjackSupport.hpp  FTmainwin.cpp  FTmainwin.hpp  FTmodRandomize.cpp  FTmodRandomize.hpp  FTmodRotate.cpp  FTmodRotate.hpp  FTmodRotateLFO.cpp  FTmodRotateLFO.hpp  FTmodValueLFO.cpp  FTmodValueLFO.hpp  FTmodulatorDialog.cpp  FTmodulatorDialog.hpp  FTmodulatorGui.cpp  FTmodulatorGui.hpp  FTmodulatorI.cpp  FTmodulatorI.hpp  FTmodulatorManager.cpp  FTmodulatorManager.hpp  FTportSelectionDialog.cpp  FTportSelectionDialog.hpp  FTpresetBlendDialog.cpp  FTpresetBlendDialog.hpp  FTpresetBlender.cpp  FTpresetBlender.hpp  FTprocBoost.cpp  FTprocBoost.hpp  (+46 more)
src/CVS/: Entries  Repository
src/pixmaps/: barplot_active.xpm  barplot_disabled.xpm  barplot_focus.xpm  barplot_normal.xpm  barplot_selected.xpm  bypass_active.xpm  bypass_disabled.xpm  bypass_focus.xpm  bypass_normal.xpm  bypass_selected.xpm  grid_active.xpm  grid_disabled.xpm  grid_focus.xpm  grid_normal.xpm  grid_selected.xpm  gridsnap_active.xpm  gridsnap_disabled.xpm  gridsnap_focus.xpm  gridsnap_normal.xpm  gridsnap_selected.xpm  lineplot_active.xpm  lineplot_disabled.xpm  lineplot_focus.xpm  lineplot_normal.xpm  lineplot_selected.xpm  link_active.xpm  link_disabled.xpm  link_focus.xpm  link_normal.xpm  link_selected.xpm  plot_buttons.xcf  specplot_active.xpm  specplot_disabled.xpm  specplot_focus.xpm  specplot_normal.xpm  specplot_selected.xpm
src/pixmaps/CVS/: Entries  Repository
